Semana 2 proyecto inicial del curso Martes CIII 2022

--- a/src/main/resources/static/ejemplo4.html
+++ b/src/main/resources/static/ejemplo4.html
@@ -8,13 +8,14 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <title>TechShop</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <a href="ejemplo3.html">Back</a> |
         <a href="index.html">Home</a> |
-        <a href="ejemplo2.html">Next</a><br>
+        <a href="ejemplo5.html">Next</a><br>
         <div>
-            <h1 style="text-align: center;background-color: black;color: white">Ejemplo 4</h1>
+            <h1 style="text-align: center">Ejemplo 4</h1>
             <hr/>
             <p>Uso de etiquetas de <span style="font-family: Comic Sans MS;color: red; font-size: 22px">formateo especial</span> de texto</p>
         </div>
