--- a/src/main/resources/static/ejemplo5.html
+++ b/src/main/resources/static/ejemplo5.html
@@ -11,21 +11,29 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <a href="ejemplo2.html">Back</a> |
+        <a href="ejemplo4.html">Back</a> |
         <a href="index.html">Home</a> |
-        <a href="ejemplo4.html">Next</a><br>
+        <a href="ejemplo6.html">Next</a><br>
         <div>
-            <h1 style="text-align: center">Ejemplo 3</h1>
+            <h1 style="text-align: center;">Ejemplo 5</h1>
             <hr/>
-            <p>Uso de encabezados</p>
+            <p>Uso de etiquetas de listas</p>
         </div>
+        <h2>La lista de compras</h2>
+        <ul>
+            <li>Cafe</li>
+            <li>Pan</li>
+            <li>Queso</li>
+        </ul>
         
-     
-        <h2>Encabezado2</h2>
-        <h3>Encabezado3</h3>
-        <h4>Encabezado4</h4>
-        <h5>Encabezado5</h5>
-        <h6>Encabezado6</h6>
-
+        <h3>Comprar en este orden</h3>
+        <ol type = "a"> 
+            <li>Cafe</li>
+            <li>Pan</li>
+            <li>Queso</li>
+            <li>Cafe</li>
+            <li>Pan</li>
+            <li>Queso</li>
+        </ol>
     </body>
 </html>
