--- a/src/main/resources/static/ejemplo6.html
+++ b/src/main/resources/static/ejemplo6.html
@@ -11,21 +11,15 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <a href="ejemplo2.html">Back</a> |
+        <a href="ejemplo5.html">Back</a> |
         <a href="index.html">Home</a> |
-        <a href="ejemplo4.html">Next</a><br>
+        <a href="ejemplo2.html">Next</a><br>
         <div>
-            <h1 style="text-align: center">Ejemplo 3</h1>
+            <h1 style="text-align: center">Ejemplo 6</h1>
             <hr/>
-            <p>Uso de encabezados</p>
+            <p>Uso de etiquetas imagenes</p>
         </div>
-        
-     
-        <h2>Encabezado2</h2>
-        <h3>Encabezado3</h3>
-        <h4>Encabezado4</h4>
-        <h5>Encabezado5</h5>
-        <h6>Encabezado6</h6>
-
+        <img src="img/marmota.jpg" alt="imagen de una marmota" width="250"/>
+        <img src="img/tigre.jpg" alt="imagen de un tigre de Bengala" height="100"/>
     </body>
 </html>
