Semana 4 proyecto inicial del curso Martes CIII 2022

--- a/src/main/resources/static/index_anterior.html
+++ b/src/main/resources/static/index_anterior.html
@@ -27,7 +27,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
         
         <aside>
             <h2>Promo del dia</h2>   
-            <p>El producot es...<p>
+            <p>El produco es...<p>
         </aside>
         <section>
             <h2>Nuestros producots</h2> 
